# Spike

Analysis/: CMakeLists.txt  README  build.sh
Analysis/Macros/: ana.C  ana_Fig_9.C  analyze_weight_change_after_STDP.C  plot.C  plot_Fig_9.C  plot_raw_Spike_output.C
Analysis/Source/: CMakeLists.txt  PolychromousGroup.h  productionLinkDef.h
Analysis/lib/: libproduction_rdict.pcm
Examples/: CMakeLists.txt  WXTest.cpp  aki_model.C  aki_model.h  run_aki_model.cpp  run_config.txt  submit.py
Spike/Models/: SpikingModel.cpp
Spike/Synapses/: Synapses.cpp
output/: Makefile  README  ana.C  ana_Fig_9.C  analyze_weight_change_after_STDP.C  plot.C  plot_Fig_9.C  plot_raw_Spike_output.C  production.C  production.h  run_ana.sh  run_ana_Fig_9.sh  run_analyze_weight_change_after_STDP.sh
output/synapse_dir/: synapse_start_end_ID_in_group_file.txt
